--- a/notebooks/ac4119/04-analysis-results-Copy1.ipynb
+++ b/notebooks/ac4119/04-analysis-results-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -52,8 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fname = 'sgd_attempts_ac4119_202005119b'\n",
@@ -62,344 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>elapsed_time</th>\n",
-       "      <th>train_set</th>\n",
-       "      <th>dev_set</th>\n",
-       "      <th>vectorizer</th>\n",
-       "      <th>model</th>\n",
-       "      <th>params.random_state</th>\n",
-       "      <th>params.class_weight</th>\n",
-       "      <th>metrics.train_accuracy</th>\n",
-       "      <th>metrics.test_accuracy</th>\n",
-       "      <th>metrics.test_auc_pred</th>\n",
-       "      <th>metrics.test_auc_score</th>\n",
-       "      <th>metrics.test_ap_pred</th>\n",
-       "      <th>metrics.test_ap_score</th>\n",
-       "      <th>params.alpha</th>\n",
-       "      <th>params.loss</th>\n",
-       "      <th>params.penalty</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>15.489576</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ac4119_dev_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.703404</td>\n",
-       "      <td>0.612451</td>\n",
-       "      <td>0.652663</td>\n",
-       "      <td>0.709396</td>\n",
-       "      <td>0.147248</td>\n",
-       "      <td>0.200120</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>14.665768</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ac4119_train_set_1_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.703404</td>\n",
-       "      <td>0.672118</td>\n",
-       "      <td>0.679852</td>\n",
-       "      <td>0.743642</td>\n",
-       "      <td>0.565550</td>\n",
-       "      <td>0.669832</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>14.387325</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ac4119_train_set_2_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.703404</td>\n",
-       "      <td>0.670310</td>\n",
-       "      <td>0.678182</td>\n",
-       "      <td>0.742235</td>\n",
-       "      <td>0.564047</td>\n",
-       "      <td>0.666579</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>15.065834</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ac4119_train_set_3_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.703404</td>\n",
-       "      <td>0.673258</td>\n",
-       "      <td>0.680898</td>\n",
-       "      <td>0.745991</td>\n",
-       "      <td>0.566501</td>\n",
-       "      <td>0.670143</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>14.234047</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ac4119_train_set_4_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.703404</td>\n",
-       "      <td>0.671128</td>\n",
-       "      <td>0.679009</td>\n",
-       "      <td>0.743160</td>\n",
-       "      <td>0.564750</td>\n",
-       "      <td>0.665896</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2939</th>\n",
-       "      <td>14.133293</td>\n",
-       "      <td>7</td>\n",
-       "      <td>ac4119_train_set_6_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>squared_hinge</td>\n",
-       "      <td>l1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2940</th>\n",
-       "      <td>11.869360</td>\n",
-       "      <td>7</td>\n",
-       "      <td>ac4119_train_set_6_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.603348</td>\n",
-       "      <td>0.601498</td>\n",
-       "      <td>0.607448</td>\n",
-       "      <td>0.641411</td>\n",
-       "      <td>0.509199</td>\n",
-       "      <td>0.565341</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>squared_hinge</td>\n",
-       "      <td>elasticnet</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2941</th>\n",
-       "      <td>12.728566</td>\n",
-       "      <td>7</td>\n",
-       "      <td>ac4119_train_set_6_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.724620</td>\n",
-       "      <td>0.643543</td>\n",
-       "      <td>0.645729</td>\n",
-       "      <td>0.698631</td>\n",
-       "      <td>0.539551</td>\n",
-       "      <td>0.609903</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>perceptron</td>\n",
-       "      <td>l2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2942</th>\n",
-       "      <td>18.423309</td>\n",
-       "      <td>7</td>\n",
-       "      <td>ac4119_train_set_6_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>perceptron</td>\n",
-       "      <td>l1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2943</th>\n",
-       "      <td>11.715576</td>\n",
-       "      <td>7</td>\n",
-       "      <td>ac4119_train_set_6_w_tokens</td>\n",
-       "      <td>tfidf</td>\n",
-       "      <td>SGDClassifier</td>\n",
-       "      <td>519</td>\n",
-       "      <td>balanced</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.444442</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>perceptron</td>\n",
-       "      <td>elasticnet</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2944 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      elapsed_time  train_set                      dev_set vectorizer  \\\n",
-       "0        15.489576          0          ac4119_dev_w_tokens      tfidf   \n",
-       "1        14.665768          0  ac4119_train_set_1_w_tokens      tfidf   \n",
-       "2        14.387325          0  ac4119_train_set_2_w_tokens      tfidf   \n",
-       "3        15.065834          0  ac4119_train_set_3_w_tokens      tfidf   \n",
-       "4        14.234047          0  ac4119_train_set_4_w_tokens      tfidf   \n",
-       "...            ...        ...                          ...        ...   \n",
-       "2939     14.133293          7  ac4119_train_set_6_w_tokens      tfidf   \n",
-       "2940     11.869360          7  ac4119_train_set_6_w_tokens      tfidf   \n",
-       "2941     12.728566          7  ac4119_train_set_6_w_tokens      tfidf   \n",
-       "2942     18.423309          7  ac4119_train_set_6_w_tokens      tfidf   \n",
-       "2943     11.715576          7  ac4119_train_set_6_w_tokens      tfidf   \n",
-       "\n",
-       "              model  params.random_state params.class_weight  \\\n",
-       "0     SGDClassifier                  519            balanced   \n",
-       "1     SGDClassifier                  519            balanced   \n",
-       "2     SGDClassifier                  519            balanced   \n",
-       "3     SGDClassifier                  519            balanced   \n",
-       "4     SGDClassifier                  519            balanced   \n",
-       "...             ...                  ...                 ...   \n",
-       "2939  SGDClassifier                  519            balanced   \n",
-       "2940  SGDClassifier                  519            balanced   \n",
-       "2941  SGDClassifier                  519            balanced   \n",
-       "2942  SGDClassifier                  519            balanced   \n",
-       "2943  SGDClassifier                  519            balanced   \n",
-       "\n",
-       "      metrics.train_accuracy  metrics.test_accuracy  metrics.test_auc_pred  \\\n",
-       "0                   0.703404               0.612451               0.652663   \n",
-       "1                   0.703404               0.672118               0.679852   \n",
-       "2                   0.703404               0.670310               0.678182   \n",
-       "3                   0.703404               0.673258               0.680898   \n",
-       "4                   0.703404               0.671128               0.679009   \n",
-       "...                      ...                    ...                    ...   \n",
-       "2939                0.444442               0.444442               0.500000   \n",
-       "2940                0.603348               0.601498               0.607448   \n",
-       "2941                0.724620               0.643543               0.645729   \n",
-       "2942                0.444442               0.444442               0.500000   \n",
-       "2943                0.444442               0.444442               0.500000   \n",
-       "\n",
-       "      metrics.test_auc_score  metrics.test_ap_pred  metrics.test_ap_score  \\\n",
-       "0                   0.709396              0.147248               0.200120   \n",
-       "1                   0.743642              0.565550               0.669832   \n",
-       "2                   0.742235              0.564047               0.666579   \n",
-       "3                   0.745991              0.566501               0.670143   \n",
-       "4                   0.743160              0.564750               0.665896   \n",
-       "...                      ...                   ...                    ...   \n",
-       "2939                0.500000              0.444442               0.444442   \n",
-       "2940                0.641411              0.509199               0.565341   \n",
-       "2941                0.698631              0.539551               0.609903   \n",
-       "2942                0.500000              0.444442               0.444442   \n",
-       "2943                0.500000              0.444442               0.444442   \n",
-       "\n",
-       "      params.alpha    params.loss params.penalty  \n",
-       "0              NaN            NaN            NaN  \n",
-       "1              NaN            NaN            NaN  \n",
-       "2              NaN            NaN            NaN  \n",
-       "3              NaN            NaN            NaN  \n",
-       "4              NaN            NaN            NaN  \n",
-       "...            ...            ...            ...  \n",
-       "2939          0.01  squared_hinge             l1  \n",
-       "2940          0.01  squared_hinge     elasticnet  \n",
-       "2941          0.01     perceptron             l2  \n",
-       "2942          0.01     perceptron             l1  \n",
-       "2943          0.01     perceptron     elasticnet  \n",
-       "\n",
-       "[2944 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eval_metrics_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -412,11 +77,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "eval_metrics_df = pd.concat([vs_dev_set, eval_metrics_df_new])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['elapsed_time', 'train_set', 'dev_set', 'vectorizer', 'model',\n",
+       "       'params.random_state', 'params.class_weight', 'metrics.train_accuracy',\n",
+       "       'metrics.test_accuracy', 'metrics.test_auc_pred',\n",
+       "       'metrics.test_auc_score', 'metrics.test_ap_pred',\n",
+       "       'metrics.test_ap_score', 'params.alpha', 'params.loss',\n",
+       "       'params.penalty'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_metrics_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_metrics_df[eval_metrics_df['params.alpha'] >0][cols].to_csv('ac_results.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cols = ['params.alpha', 'params.loss', 'params.penalty', 'metrics.test_auc_score', \n",
+    "       'metrics.test_ap_score']"
    ]
   },
   {
@@ -811,18 +525,6 @@
    ],
    "source": [
     "vs_dev_set[vs_dev_set['metrics.test_ap_score'] == best_ap_score]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "Hey guys, lmk if you guys think you are done with you implementations. One thing I don't think any of us have tried yet, it to incorporate the "
    ]
   },
   {
