--- a/notebooks/ac4119/01-data-preprocessing-Copy2.ipynb
+++ b/notebooks/ac4119/01-data-preprocessing-Copy2.ipynb
@@ -29,6 +29,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ex_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>prod_id</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>date</th>\n",
+       "      <th>review</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>label</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32270</td>\n",
+       "      <td>32270</td>\n",
+       "      <td>32270</td>\n",
+       "      <td>32270</td>\n",
+       "      <td>32270</td>\n",
+       "      <td>32270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3648</td>\n",
+       "      <td>3648</td>\n",
+       "      <td>3648</td>\n",
+       "      <td>3648</td>\n",
+       "      <td>3648</td>\n",
+       "      <td>3648</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ex_id  user_id  prod_id  rating   date  review\n",
+       "label                                                \n",
+       "0      32270    32270    32270   32270  32270   32270\n",
+       "1       3648     3648     3648    3648   3648    3648"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validation.groupby(['label']).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35918"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(3648+32270)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,7 +330,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_overlapping_words = ['', 'around', 'time', 'staff', 'wait', 'went', 'worth', 'made', 've', 'bit', 'pork', 'new', 'm', 'chicken', 'way', 'well', 'fresh', 'good', 'delicious', 'pretty', 'could', 'service', 'friendly', 'amazing', 'come', 'us', 'friend', 'like', 'night', 'go', 'place', 'also', 'bar', 'better', 'always', 'one', 'salad', 'make', 'got', 'food', 'great', 'long', 'never', 'say', 'dinner', 'try', 'two', 'know', 'nice', 'restaurant', 'definitely', 'order', 'people', 'would', 'eat', 'back', 'much', 'ever', 'really', 'sauce', 'table', 'even', 'menu', 'experience', 'ordered', 'perfect', 'want', 're', 'love', 'wine', 'cheese', 'came', 'meal', 'ca', 'nt', 's', 'right', 'small', 'everything', 'get', 'pizza', 'best', 'little', 'think', 'first', 'brunch', 'friends']"
@@ -237,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "punctuations = string.punctuation\n",
@@ -275,7 +381,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "example = \"IF YOU ARE A SELF RESPECTING WOMAN WHO IS LOOKING TO EAT SOME DELICIOUS FOOD OR RESERVE A TABLE FOR A BIRTHDAY PARTY LOOK ELSEWHERE PLEASE!!!!!! I made a reservation for a birthday dinner several days before the actual day. They only offered me two different times that were way apart. And by this I mean the interval was ridiculous. Something like 6:45 or 11:30. I opted for the earlier one, even though my friends worked until 7 and could not get there on time. Upon arriving, I took a seat at the bar and was kindly offered a cocktail by the AMAZINGLY helpful and welcoming bartenders. They had taken my card and put it on file to reserve the table, and told me my table would be mine for two hours. While I waited for my friends to arrive at the bar, the MANAGER came up to me and told me I was gorgeous, but he would need to personally take in my dress (since it was a flowing, shirt dress with no belt) because my \"\"dress did not do justice\"\". When I exclaimed, \"\"EXCUSE ME?!\"\" he proceeded to add that I needed to show more leg and my figure because the dress was unflattering. HE CLEARLY HAD A RING ON HIS FINGER AND IS A MARRIED MAN. When my friend interjected and made him know we saw his ring, he simply shrugged and told her she was mad because he didn't flirt with her. :0 Once my friends arrived at about 7:30, I went up to the maitre d and informed him. He looked at me and told me he sat down others in MY TABLE, WHICH WAS RESERVED FOR 2 HOURS. He then continued to add that walk-ins take precedence, which completely baffles me because, JEEZ what is then the point of making a reservation?! IT IS MEANT TO RESERVE A SPOT FOR AN ALLOTTED PERIOD OF TIME. Unfortunately these two massively uncomfortable instances were enough to ruin my perception of the restaurant. The drinks were delicious. The food was as well. But POOR POOR POOR POOR POOR and PUTRID SERVICE. I AM DISGUSTED. The owner would do well in firing their entire management staff. Like I said the food was good, but the quantity was a joke, as well as the pricing for such menial meals. The most surprising thing out of all of this was after I expressed my annoyance I was not even offered an apology. Simple. I will never return again. If you appreciate honesty at its best, you'd believe this review for all its worth, because I give credit where it's due.\"\n",
